CKS/NetworkPolicies/allow-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  Ingress:
  - from:
      podSelector:
        matchLabels:
          access: "true"
    port:
    - protocol: TCP
      port: 80
